libpurple/conversation.h


typedef struct _PurpleConversationUiOps PurpleConversationUiOps;
typedef struct _PurpleConversation      PurpleConversation;
typedef struct _PurpleConvIm            PurpleConvIm;
typedef struct _PurpleConvChat          PurpleConvChat;
typedef enum
{
	PURPLE_CONV_TYPE_UNKNOWN = 0, 
	PURPLE_CONV_TYPE_IM,          
	PURPLE_CONV_TYPE_CHAT,        
	PURPLE_CONV_TYPE_MISC,        
	PURPLE_CONV_TYPE_ANY          
} PurpleConversationType;
typedef enum
{
	PURPLE_CONV_UPDATE_ADD = 0, 
	PURPLE_CONV_UPDATE_REMOVE,  
	PURPLE_CONV_UPDATE_ACCOUNT, 
	PURPLE_CONV_UPDATE_TYPING,  
	PURPLE_CONV_UPDATE_UNSEEN,  
	PURPLE_CONV_UPDATE_LOGGING, 
	PURPLE_CONV_UPDATE_TOPIC,   
	PURPLE_CONV_ACCOUNT_ONLINE,  
	PURPLE_CONV_ACCOUNT_OFFLINE, 
	PURPLE_CONV_UPDATE_AWAY,     
	PURPLE_CONV_UPDATE_ICON,     
	PURPLE_CONV_UPDATE_TITLE,
	PURPLE_CONV_UPDATE_CHATLEFT,
	PURPLE_CONV_UPDATE_FEATURES, 
} PurpleConvUpdateType;
typedef enum
{
	PURPLE_MESSAGE_SEND        = 0x0001, 
	PURPLE_MESSAGE_RECV        = 0x0002, 
	PURPLE_MESSAGE_SYSTEM      = 0x0004, 
	PURPLE_MESSAGE_AUTO_RESP   = 0x0008, 
	PURPLE_MESSAGE_ACTIVE_ONLY = 0x0010,  
	PURPLE_MESSAGE_NICK        = 0x0020, 
	PURPLE_MESSAGE_NO_LOG      = 0x0040, 
	PURPLE_MESSAGE_WHISPER     = 0x0080, 
	PURPLE_MESSAGE_ERROR       = 0x0200, 
	PURPLE_MESSAGE_DELAYED     = 0x0400, 
	PURPLE_MESSAGE_RAW         = 0x0800, 
	PURPLE_MESSAGE_IMAGES      = 0x1000, 
	PURPLE_MESSAGE_NOTIFY      = 0x2000, 
	PURPLE_MESSAGE_NO_LINKIFY  = 0x4000, 
	PURPLE_MESSAGE_INVISIBLE   = 0x8000, 
} PurpleMessageFlags;
struct _PurpleConversationUiOps
{
	void (*create_conversation)(PurpleConversation *conv);
	void (*destroy_conversation)(PurpleConversation *conv);
	void (*write_chat)(PurpleConversation *conv, const char *who,
	                   const char *message, PurpleMessageFlags flags,
	                   time_t mtime);
	void (*write_im)(PurpleConversation *conv, const char *who,
	                 const char *message, PurpleMessageFlags flags,
	                 time_t mtime);
	void (*write_conv)(PurpleConversation *conv,
	                   const char *name,
	                   const char *alias,
	                   const char *message,
	                   PurpleMessageFlags flags,
	                   time_t mtime);
	void (*chat_add_users)(PurpleConversation *conv,
	                       GList *cbuddies,
	                       gboolean new_arrivals);
	void (*chat_rename_user)(PurpleConversation *conv, const char *old_name,
	                         const char *new_name, const char *new_alias);
	void (*chat_remove_users)(PurpleConversation *conv, GList *users);
	void (*chat_update_user)(PurpleConversation *conv, const char *user);
	void (*present)(PurpleConversation *conv);
	gboolean (*has_focus)(PurpleConversation *conv);
	gboolean (*custom_smiley_add)(PurpleConversation *conv, const char *smile, gboolean remote);
	void (*custom_smiley_write)(PurpleConversation *conv, const char *smile,
	                            const guchar *data, gsize size);
	void (*custom_smiley_close)(PurpleConversation *conv, const char *smile);
	void (*send_confirm)(PurpleConversation *conv, const char *message);
	void (*_purple_reserved1)(void);
	void (*_purple_reserved2)(void);
	void (*_purple_reserved3)(void);
	void (*_purple_reserved4)(void);
};
struct _PurpleConvIm
{
	PurpleConversation *conv;            
	PurpleTypingState typing_state;      
	guint  typing_timeout;             
	time_t type_again;                 
	guint  send_typed_timeout;         
	PurpleBuddyIcon *icon;               
};
struct _PurpleConvChat
{
	PurpleConversation *conv;          
	GList *in_room;                  
	GList *ignored;                  
	char  *who;                      
	char  *topic;                    
	int    id;                       
	char *nick;                      
	gboolean left;                   
};
struct _PurpleConversation
{
	PurpleConversationType type;  
	PurpleAccount *account;       
	char *name;                 
	char *title;                
	gboolean logging;           
	GList *logs;                
	union
	{
		PurpleConvIm   *im;       
		PurpleConvChat *chat;     
		void *misc;             
	} u;
	PurpleConversationUiOps *ui_ops;           
	void *ui_data;                           
	GHashTable *data;                        
	PurpleConnectionFlags features; 
};
PurpleConversation *purple_conversation_new(PurpleConversationType type,
										PurpleAccount *account,
										const char *name);
void purple_conversation_destroy(PurpleConversation *conv);
void purple_conversation_present(PurpleConversation *conv);
PurpleConversationType purple_conversation_get_type(const PurpleConversation *conv);
void purple_conversation_set_ui_ops(PurpleConversation *conv,
								  PurpleConversationUiOps *ops);
void purple_conversations_set_ui_ops(PurpleConversationUiOps *ops);
PurpleConversationUiOps *purple_conversation_get_ui_ops(
		const PurpleConversation *conv);
void purple_conversation_set_account(PurpleConversation *conv,
                                   PurpleAccount *account);
PurpleAccount *purple_conversation_get_account(const PurpleConversation *conv);
PurpleConnection *purple_conversation_get_gc(const PurpleConversation *conv);
void purple_conversation_set_title(PurpleConversation *conv, const char *title);
const char *purple_conversation_get_title(const PurpleConversation *conv);
void purple_conversation_autoset_title(PurpleConversation *conv);
void purple_conversation_set_name(PurpleConversation *conv, const char *name);
const char *purple_conversation_get_name(const PurpleConversation *conv);
void purple_conversation_set_logging(PurpleConversation *conv, gboolean log);
gboolean purple_conversation_is_logging(const PurpleConversation *conv);
void purple_conversation_close_logs(PurpleConversation *conv, void (*cb) (void *), void *data);
PurpleConvIm *purple_conversation_get_im_data(const PurpleConversation *conv);
PurpleConvChat *purple_conversation_get_chat_data(const PurpleConversation *conv);
void purple_conversation_set_data(PurpleConversation *conv, const char *key,
								gpointer data);
gpointer purple_conversation_get_data(PurpleConversation *conv, const char *key);
GList *purple_get_conversations(void);
GList *purple_get_ims(void);
GList *purple_get_chats(void);
PurpleConversation *purple_find_conversation_with_account(
		PurpleConversationType type, const char *name,
		const PurpleAccount *account);
void purple_conversation_write(PurpleConversation *conv, const char *who,
		const char *message, PurpleMessageFlags flags,
		time_t mtime);
void purple_conversation_set_features(PurpleConversation *conv,
		PurpleConnectionFlags features);
PurpleConnectionFlags purple_conversation_get_features(PurpleConversation *conv);
gboolean purple_conversation_has_focus(PurpleConversation *conv);
void purple_conversation_update(PurpleConversation *conv, PurpleConvUpdateType type);
void purple_conversation_foreach(void (*func)(PurpleConversation *conv));