libpurple/wrapper/Conversation.cs

/* purple
 *
 * Purple is the legal property of its developers, whose names are too numerous
 * to list here.  Please refer to the COPYRIGHT file distributed with this
 * source distribution.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02111-1301  USA
 */

/*
 * This file was auto-generated from the libpurple header files to provide a
 * clean interface between .NET/CLR and the unmanaged C library, libpurple.
 *
 * This code isn't complete, but completely a work in progress. :)
 * Three major things left:
 *  - Resolve the remaining UNKNOWN types.
 *  - Handle translation between delegate and function pointers.
 *  - Fill in the translation between public .NET class calls and private DllImport[] calls.
 */

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace PurpleWrapper
{
	public class Conversation
	{
		/*
		 * PurpleConversation * purple_conversation_new(PurpleConversationType type, PurpleAccount * account, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_new(UNKNOWN type, IntPtr account, string name);

		public static PurpleConversation New(PurpleConversationType type, PurpleAccount account, string name)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_destroy(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_destroy(IntPtr conv);

		public static void Destroy(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_present(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_present(IntPtr conv);

		public static void Present(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConversationType purple_conversation_get_type(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_conversation_get_type(IntPtr conv);

		public static PurpleConversationType GetType(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_set_ui_ops(PurpleConversation * conv, PurpleConversationUiOps * ops)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_set_ui_ops(IntPtr conv, IntPtr ops);

		public static void SetUiOps(PurpleConversation conv, PurpleConversationUiOps ops)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversations_set_ui_ops(PurpleConversationUiOps * ops)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversations_set_ui_ops(IntPtr ops);

		public static void ConversationsSetUiOps(PurpleConversationUiOps ops)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConversationUiOps * purple_conversation_get_ui_ops(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_get_ui_ops(IntPtr conv);

		public static PurpleConversationUiOps GetUiOps(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_set_account(PurpleConversation * conv, PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_set_account(IntPtr conv, IntPtr account);

		public static void SetAccount(PurpleConversation conv, PurpleAccount account)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleAccount * purple_conversation_get_account(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_get_account(IntPtr conv);

		public static PurpleAccount GetAccount(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConnection * purple_conversation_get_gc(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_get_gc(IntPtr conv);

		public static PurpleConnection GetGc(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_set_title(PurpleConversation * conv, char * title)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_set_title(IntPtr conv, string title);

		public static void SetTitle(PurpleConversation conv, string title)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conversation_get_title(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conversation_get_title(IntPtr conv);

		public static string GetTitle(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_autoset_title(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_autoset_title(IntPtr conv);

		public static void AutosetTitle(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_set_name(PurpleConversation * conv, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_set_name(IntPtr conv, string name);

		public static void SetName(PurpleConversation conv, string name)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_conversation_get_name(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_conversation_get_name(IntPtr conv);

		public static string GetName(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_set_logging(PurpleConversation * conv, gboolean log)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_set_logging(IntPtr conv, bool log);

		public static void SetLogging(PurpleConversation conv, bool log)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conversation_is_logging(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conversation_is_logging(IntPtr conv);

		public static bool IsLogging(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_close_logs(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_close_logs(IntPtr conv);

		public static void CloseLogs(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConvIm * purple_conversation_get_im_data(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_get_im_data(IntPtr conv);

		public static PurpleConvIm GetImData(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConvChat * purple_conversation_get_chat_data(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_get_chat_data(IntPtr conv);

		public static PurpleConvChat GetChatData(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_set_data(PurpleConversation * conv, char * key, gpointer data)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_set_data(IntPtr conv, string key, IntPtr data);

		public static void SetData(PurpleConversation conv, string key, IntPtr data)
		{
			throw new NotImplementedException();
		}

		/*
		 * gpointer purple_conversation_get_data(PurpleConversation * conv, char * key)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_conversation_get_data(IntPtr conv, string key);

		public static IntPtr GetData(PurpleConversation conv, string key)
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_get_conversations()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_get_conversations();

		public static GList GetConversations()
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_get_ims()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_get_ims();

		public static GList GetIms()
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_get_chats()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_get_chats();

		public static GList GetChats()
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConversation * purple_find_conversation_with_account(PurpleConversationType type, char * name, PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_find_conversation_with_account(UNKNOWN type, string name, IntPtr account);

		public static PurpleConversation FindConversationWithAccount(PurpleConversationType type, string name, PurpleAccount account)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_write(PurpleConversation * conv, char * who, char * message, PurpleMessageFlags flags, time_t mtime)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_write(IntPtr conv, string who, string message, UNKNOWN flags, UNKNOWN mtime);

		public static void Write(PurpleConversation conv, string who, string message, PurpleMessageFlags flags, time_t mtime)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_set_features(PurpleConversation * conv, PurpleConnectionFlags features)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_set_features(IntPtr conv, UNKNOWN features);

		public static void SetFeatures(PurpleConversation conv, PurpleConnectionFlags features)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleConnectionFlags purple_conversation_get_features(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_conversation_get_features(IntPtr conv);

		public static PurpleConnectionFlags GetFeatures(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_conversation_has_focus(PurpleConversation * conv)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_conversation_has_focus(IntPtr conv);

		public static bool HasFocus(PurpleConversation conv)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_conversation_update(PurpleConversation * conv, PurpleConvUpdateType type)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_conversation_update(IntPtr conv, UNKNOWN type);

		public static void Update(PurpleConversation conv, PurpleConvUpdateType type)
		{
			throw new NotImplementedException();
		}
